# bingoserver

./: .gitignore  PROTOCOL.md  README.md  auth.py  client.py  config.py  gameteam.py  main.py  models.py  pyproject.toml  room.py  server.py
rest/: __init__.py  tmexchange.py
routes/: __init__.py  claim.py  create.py  join.py  leave.py  rooms.py  start.py  sync.py  team_create.py  teams.py
routes/internal/: clients.py  rooms.py
util/: verbose.py  version.py
